--- a/.gitignore
+++ b/.gitignore
@@ -102,3 +102,44 @@ dist
 
 # TernJS port file
 .tern-port
+
+# Build folder and files #
+##########################
+release-builds/
+
+# Development folders and files #
+#################################
+.tmp/
+dist/
+*.compiled.*
+
+# Folder config file #
+######################
+Desktop.ini
+
+# Folder notes #
+################
+_ignore/
+
+# Packages #
+############
+# it's better to unpack these files and commit the raw source
+# git has its own built in compression methods
+*.7z
+*.dmg
+*.gz
+*.iso
+*.jar
+*.rar
+*.tar
+*.zip
+
+# Windows & Mac file caches #
+#############################
+.DS_Store
+Thumbs.db
+ehthumbs.db
+
+# Windows shortcuts #
+#####################
+*.lnk
