--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
   "homepage": "https://github.com/ptmanh92/Abex-Homepage-Editor#readme",
   "dependencies": {
     "bootstrap": "^5.1.0",
+    "ckeditor4-react": "^2.0.0",
     "electron": "^13.1.9",
     "react": "^17.0.2",
     "react-bootstrap": "^2.0.0-beta.4",
