--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "bootstrap": "^5.1.0",
     "ckeditor4-react": "^2.0.0",
     "electron": "^13.1.9",
+    "electron-store": "^8.0.0",
     "react": "^17.0.2",
     "react-bootstrap": "^2.0.0-beta.4",
     "react-dom": "^17.0.2"
