--- a/package.json
+++ b/package.json
@@ -26,7 +26,8 @@
     "electron-store": "^8.0.0",
     "react": "^17.0.2",
     "react-bootstrap": "^2.0.0-beta.4",
-    "react-dom": "^17.0.2"
+    "react-dom": "^17.0.2",
+    "uuidv4": "^6.2.12"
   },
   "devDependencies": {
     "@babel/core": "^7.15.0",
